testing fixes to turn off shutter sound

--- a/plugin.xml
+++ b/plugin.xml
@@ -50,7 +50,8 @@
 
     <header-file src="src/ios/CameraPreview.h" />
     <source-file src="src/ios/CameraPreview.m" />
-
+    <resource-file src="src/ios/CameraPreview.bundle" />
+    
      <header-file src="src/ios/TemperatureAndTint.h" />
     <source-file src="src/ios/TemperatureAndTint.m" />
 
